--- a/app/dashboard/home/home.component.html
+++ b/app/dashboard/home/home.component.html
@@ -5,7 +5,7 @@
         </div>
 
         <div class="col-lg-3 col-md-6 col-sm-6" *ngFor=" let item of villas; let i = index " >
-            <villa-cmp [villa]="item"></villa-cmp>
+            <villa-cmp [villa]="item" [region]="regions[item.RegionId-1].Name"></villa-cmp>
         </div>
 
     </div>
