add main filter component to the left side bar

--- a/app/sidebar/sidebar.component.html
+++ b/app/sidebar/sidebar.component.html
@@ -57,6 +57,7 @@
                             <i class="{{menuItems[0].icon}}">dashboard</i>
                             <p>{{menuItems[0].title}}</p>
                         </a>
+                        <mainfilter-cmp></mainfilter-cmp>
                     </li>
                 </ul>
             </div>
