--- a/app/sidebar/sidebar.component.html
+++ b/app/sidebar/sidebar.component.html
@@ -59,6 +59,30 @@
                         </a>
                         <mainfilter-cmp></mainfilter-cmp>
                     </li>
+                    <li routerLinkActive="active">
+                        <a  [routerLink]="[menuItems[1].path]">
+                            <i class="{{menuItems[1].icon}}">dashboard</i>
+                            <p>{{menuItems[1].title}}</p>
+                        </a>
+                    </li>
+                    <li routerLinkActive="active">
+                        <a  [routerLink]="[menuItems[2].path]">
+                            <i class="{{menuItems[2].icon}}">dashboard</i>
+                            <p>{{menuItems[2].title}}</p>
+                        </a>
+                    </li>
+                    <li routerLinkActive="active">
+                        <a  [routerLink]="[menuItems[3].path]">
+                            <i class="{{menuItems[3].icon}}">dashboard</i>
+                            <p>{{menuItems[3].title}}</p>
+                        </a>
+                    </li>
+                    <li routerLinkActive="active">
+                        <a  [routerLink]="[menuItems[4].path]">
+                            <i class="{{menuItems[4].icon}}">dashboard</i>
+                            <p>{{menuItems[4].title}}</p>
+                        </a>
+                    </li>
                 </ul>
             </div>
 
