--- a/app/dashboard/components/metafilter/metafilter.component.html
+++ b/app/dashboard/components/metafilter/metafilter.component.html
@@ -1,7 +1,15 @@
 <div class="col-md-12 col-lg-12 metafilter-container">
-    <div class="metafilter-container-header card{{ collapsed ? ' collapsed' : ''}}">
-        <div class="card-header" (click)="filterDisplayChange()" data-background-color="rose">
-            <h4 class="card-title">Metadata Filters
+    <div class="metafilter-container-header card">
+        <div class="card-header">
+            <h4 class="card-title">
+                <span>{{mainService.villas.length}} Villas Found</span>
+                <span (click)="filterDisplayChange()" class="pull-right metafilter-expand {{ collapsed ? ' collapsed' : ''}}"> Metadata Filters </span>
+                <div class="order-type pull-right">
+                    <select class="selectpicker" data-style="select-with-transition" (change)="orderChange($event)">
+                        <option value="0">Price High to Low</option>
+                        <option value="1">Price Low to High</option>
+                    </select>
+                </div>
             </h4>
         </div>
         <div class="card-content" [hidden]="collapsed">
@@ -13,25 +21,31 @@
                                 {{metadata.Name}}
                             </a>
                         </li>
+                        <li class="text-center">                        
+                            <button class="btn button btn-success" (click)="applyMetafilter()">
+                                Apply Filter
+                            </button>
+                        </li>
                     </ul>
                 </div>
                 <div class="col-md-8">
                     <div class="tab-content">
-                        <button class="btn button btn-success pull-right" (click)="applyMetafilter()">
-                            Apply Filter
-                        </button>
-                        <div class="" *ngFor="let metadata of mainService.metadata; let i = index" class="tab-pane {{ i == 0 ? 'active' : ''}}"  id="metatab-{{metadata.Id}}">
+                        <div class="" *ngFor="let metadata of mainService.metadata; let i = index; let last = last" class="tab-pane {{ i == 0 ? 'active' : ''}}"  id="metatab-{{metadata.Id}}">
+                            {{last ? finished() : ""}}
                             <div class="card meta-filter" *ngFor="let subtype of metadata.MetaDataSubTypes" id="{{subtype.Id}}">
                                 <div class="card-header card-header-text" data-background-color="orange">
                                     <h4 class="card-title">{{subtype.Name}}</h4>
                                 </div>
                                 <div class="card-content">
-                                    <button class="subtype-filter btn btn-xs {{ metafilters[option.Id] ? 'btn-success' : 'btn-default'}}" *ngFor="let option of subtype.MetaData" id="{{option.Id}}" (click)="subfilterChange($event)">
+                                    <button class="hidden subtype-filter btn btn-xs {{ metafilters[option.Id] ? 'btn-success' : 'btn-default'}}" *ngFor="let option of subtype.MetaData" id="{{option.Id}}" (click)="subfilterChange($event)">
                                         <span class="btn-label">
                                             <i class="material-icons">{{ metafilters[option.Id] ? 'check' : 'close' }}</i>
                                         </span>
                                         {{option.Name}}
                                     </button>
+                                    <select class="selectpicker" multiple data-style="select-with-transition" multiple title="Choose Metadata">
+                                        <option *ngFor="let option of subtype.MetaData; let last = last" value="{{option.Id}}">{{option.Name}}</option>
+                                    </select>
                                 </div>
                             </div>
                         </div>
