--- a/app/app.component.html
+++ b/app/app.component.html
@@ -1,9 +1,9 @@
 
 <div class="wrapper">
-    <div class="sidebar" data-active-color="white" data-background-color="red" data-image="../assets/img/sidebar-1.jpg">
+    <div class="sidebar" data-active-color="white" data-background-color="#0b5a7c">
     <!-- <div class="sidebar" data-color="red" data-image=""> -->
         <sidebar-cmp></sidebar-cmp>
-        <div class="sidebar-background" style="background-image: url(assets/img/sidebar-1.jpg)"></div>
+        <div class="sidebar-background"></div>
     </div>
     <div class="main-panel">
         <navbar-cmp></navbar-cmp>
