--- a/app/dashboard/components/villa/villa.component.html
+++ b/app/dashboard/components/villa/villa.component.html
@@ -31,7 +31,7 @@
     </div>
     <div class="card-footer">
         <div class="rate">
-            <h4>Rate: {{roundRate(villa.TotalRate)}}</h4>
+            <h4>Rate: €{{roundRate(villa.TotalRate)}}</h4>
         </div>
         <div class="stats pull-right">
             <p class="category"><i class="material-icons">place</i> {{region}}</p>
