--- a/app/sidebar/mainfilter/mainfilter.component.html
+++ b/app/sidebar/mainfilter/mainfilter.component.html
@@ -4,39 +4,41 @@
             <div class="form-group">
                 <div class="budget">
                     <div class="filter-title-text"><label class="label-control">Budget</label></div>
-                    <div class="col-lg-6 col-md-6">
-                        <span>From</span>
-                        <input class="form-control spin" value="0" #bottombudget />
+                    <div class="col-lg-6 col-md-6 form-group">
+                        <label class="control-label">From</label>
+                        <input class="form-control spin label-floating" value="0" #bottombudget />
                     </div>
-                    <div class="col-lg-6 col-md-6">
-                        <span>To</span>
-                        <input class="form-control spin" value="0" #topbudget />
+                    <div class="col-lg-6 col-md-6 form-group">
+                        <label class="control-label">To</label>
+                        <input class="form-control spin label-floating" value="0" #topbudget />
                     </div>
                 </div>
                 <div class="date">
                     <div class="filter-title-text"><label class="label-control">Date</label></div>
-                    <div class="col-lg-12 col-md-12 check-in">
-                        <span>Check In</span>
-                        <input type="text" class="form-control datepicker" value="{{getToday()}}" #checkin/>
+                    <div class="col-lg-12 col-md-12 check-in form-group">
+                        <label class="control-label">Check In</label>
+                        <input type="text" class="form-control datepicker label-floating" value="{{getToday()}}" #checkin/>
                     </div>
-                    <div class="col-lg-12 col-md-12 check-out">
-                        <span>Check Out</span>
-                        <input type="text" class="form-control datepicker" value="{{getTomorrow()}}" #checkout/>
+                    <div class="col-lg-12 col-md-12 check-out form-group">
+                        <label class="control-label">Check Out</label>
+                        <input type="text" class="form-control datepicker label-floating" value="{{getTomorrow()}}" #checkout/>
                     </div>
                 </div>
                 <div class="bedrooms">
-                    <span class="filter-title-text">Bedrooms: <span id="bedroomcount">1</span> </span>
+                    <span class="filter-title-text"><label class="label-control">Bedrooms: <span id="bedroomcount">1</span></label></span>
                     <div id="sliderBedroom" class="slider"></div>
                 </div>
                 <div class="locations">
-                    <span class="filter-title-text">Locations</span>
-                    <div *ngFor=" let item of mainService.regions; let i = index ">
-                        <input type="checkbox" checked="checked" value="{{item.Id}}" (change)="locationChange($event)" /><label (click)="locationLabelClick($event)">{{item.Name}}</label>
+                    <span class="filter-title-text"><label class="label-control">Locations</label></span>
+                    <div *ngFor=" let item of mainService.regions; let i = index " class="{{ i == 0 ? 'first-child' : ''}} checkbox">
+                        <label>
+                            <input type="checkbox" checked="checked" value="{{item.Id}}" (change)="locationChange($event)" /> {{item.Name}}
+                        </label>
                     </div>
                 </div>
             </div>
         </div>
-        <button class="btn btn-success apply-button" (click)="applyFilter()">
+        <button class="btn btn-success apply-button secondary-color" (click)="applyFilter()">
             Apply
         </button>
     </div>
