--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -2,3 +2,16 @@
 .bootstrap-datetimepicker-widget {
 	left: -33px !important;
 }
+body.sidebar-mini .sidebar .nav mainfilter-cmp {
+	display: none;
+}
+
+.primary-color {
+	background-color: #0b5a7c !important;
+	color: white !important;
+}
+
+.secondary-color {
+	background-color: #5399bc !important;
+	color: white !important;
+}
