#feedback - Ensure all buttons have the grey dropshadow (currently they have a green shadow) #feedback - Left hand navigation background - primary colour

--- a/app/dashboard/components/metafilter/metafilter.component.html
+++ b/app/dashboard/components/metafilter/metafilter.component.html
@@ -15,7 +15,7 @@
         <div class="card-content" [hidden]="collapsed">
             <div class="row">
                 <div class="col-md-3">
-                    <ul class="nav nav-pills nav-pills-icons nav-pills-info nav-stacked" role="tablist">
+                    <ul class="nav nav-pills nav-pills-icons nav-pills-grey nav-stacked" role="tablist">
                         <li *ngFor="let metadata of mainService.metadata; let i = index" class="{{ i == 0 ? 'active' : ''}} showtick">
                             <a href="#metatab-{{metadata.Id}}" role="tab" data-toggle="tab" class="primary-color">
                                 {{metadata.Name}}
