--- a/app/app.component.html
+++ b/app/app.component.html
@@ -3,7 +3,7 @@
     <div class="sidebar" data-active-color="white" data-background-color="#0b5a7c">
     <!-- <div class="sidebar" data-color="red" data-image=""> -->
         <sidebar-cmp></sidebar-cmp>
-        <div class="sidebar-background"></div>
+        <div class="sidebar-background primary-color"></div>
     </div>
     <div class="main-panel">
         <navbar-cmp></navbar-cmp>
