change the text and box-shadow of apply buttons on top and left filters panel

--- a/app/dashboard/components/metafilter/metafilter.component.html
+++ b/app/dashboard/components/metafilter/metafilter.component.html
@@ -44,8 +44,8 @@
                             </div>
                         </div>
                         <div class="text-right li-applybutton">                        
-                            <button class="btn button btn-success primary-color" (click)="applyMetafilter()">
-                                Apply Filter
+                            <button class="btn button btn-success secondary-color shadow-grey" (click)="applyMetafilter()">
+                                Apply Filters
                             </button>
                         </div>
                     </div>
