--- a/app/sidebar/mainfilter/mainfilter.component.html
+++ b/app/sidebar/mainfilter/mainfilter.component.html
@@ -38,8 +38,8 @@
                 </div>
             </div>
         </div>
-        <button class="btn btn-success apply-button secondary-color" (click)="applyFilter()">
-            Apply
+        <button class="btn btn-success apply-button secondary-color shadow-grey" (click)="applyFilter()">
+            SEARCH
         </button>
     </div>
 </div>
