--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -17,6 +17,14 @@ body.sidebar-mini .sidebar .nav mainfilter-cmp {
 }
 
 .nav-pills.nav-pills-grey > li.active > a, .nav-pills.nav-pills-grey > li.active > a:focus, .nav-pills.nav-pills-grey > li.active > a:hover {
-  background-color: #00bcd4;
-  box-shadow: 0 4px 20px 0px rgba(0, 0, 0, 1), 0 7px 10px -5px rgba(0, 188, 212, 0.4);
+  	background-color: #00bcd4;
+  	box-shadow: 0 4px 20px 0px rgba(0, 0, 0, 1), 0 7px 10px -5px rgba(0, 188, 212, 0.4);
+}
+
+.shadow-grey {
+	box-shadow: none !important;
+}
+
+.shadow-grey:hover {
+  	box-shadow: 0 4px 20px 0px rgba(0, 0, 0, 1), 0 7px 10px -5px rgba(0, 188, 212, 0.4) !important;	
 }
