--- a/app/dashboard/components/villa/villa1.component.html
+++ b/app/dashboard/components/villa/villa1.component.html
@@ -20,14 +20,16 @@
                 <i class="material-icons">close</i>
             </button>
         </div>
-        <h4 class="card-title col-lg-6 col-md-6 col-sm-12">
+        <h4 class="card-title col-lg-12 col-md-12 col-sm-12">
             <a href="#pablo">{{villa.Name}}</a>
-            <p>{{villa.CollaboratorInitials}}</p>
         </h4>
         <div class="card-description col-lg-6 col-md-6 col-sm-12">
-            <span>{{villa.Bedrooms}} Bedrooms</span>
-            <span>{{villa.Bathrooms}} Bathrooms</span>
-            <span>{{villa.Sleeps}} Sleeps</span>
+            <span>{{villa.CollaboratorInitials}}</span>
+        </div>
+        <div class="card-description col-lg-6 col-md-6 col-sm-12">
+            <span class="text-right p-r-10">{{villa.Bedrooms}} Bedrooms</span>
+            <span class="text-right p-r-10">{{villa.Bathrooms}} Bathrooms</span>
+            <span class="text-right p-r-10">{{villa.Sleeps}} Sleeps</span>
         </div>
     </div>
     <div class="card-footer">
