--- a/app/sidebar/sidebar.component.html
+++ b/app/sidebar/sidebar.component.html
@@ -49,32 +49,32 @@
             <div class="nav-container">
                 <ul class="nav">
                     <li routerLinkActive="active">
-                        <a  [routerLink]="[menuItems[0].path]">
+                        <a  [routerLink]="[menuItems[0].path]" (click)="menuClick()">
                             <i class="{{menuItems[0].icon}}">dashboard</i>
                             <p>{{menuItems[0].title}}</p>
                         </a>
                         <mainfilter-cmp></mainfilter-cmp>
                     </li>
                     <li routerLinkActive="active">
-                        <a  [routerLink]="[menuItems[1].path]">
+                        <a  [routerLink]="[menuItems[1].path]" (click)="menuClick()">
                             <i class="{{menuItems[1].icon}}">dashboard</i>
                             <p>{{menuItems[1].title}}</p>
                         </a>
                     </li>
                     <li routerLinkActive="active">
-                        <a  [routerLink]="[menuItems[2].path]">
+                        <a  [routerLink]="[menuItems[2].path]" (click)="menuClick()">
                             <i class="{{menuItems[2].icon}}">dashboard</i>
                             <p>{{menuItems[2].title}}</p>
                         </a>
                     </li>
                     <li routerLinkActive="active">
-                        <a  [routerLink]="[menuItems[3].path]">
+                        <a  [routerLink]="[menuItems[3].path]" (click)="menuClick()">
                             <i class="{{menuItems[3].icon}}">dashboard</i>
                             <p>{{menuItems[3].title}}</p>
                         </a>
                     </li>
                     <li routerLinkActive="active">
-                        <a  [routerLink]="[menuItems[4].path]">
+                        <a  [routerLink]="[menuItems[4].path]" (click)="menuClick()">
                             <i class="{{menuItems[4].icon}}">dashboard</i>
                             <p>{{menuItems[4].title}}</p>
                         </a>
