--- a/app/dashboard/properties/properties.component.html
+++ b/app/dashboard/properties/properties.component.html
@@ -10,7 +10,7 @@
                         <h4 class="card-title">Properties</h4>
                         <div class="toolbar">
                             <!--        Here you can write extra buttons/actions for the toolbar              -->
-                            <button class="btn btn-simple btn-success btn-icon pull-right secondary-color shadow-grey"><i class="material-icons">add_to_queue</i> Add Property</button>
+                            <button class="btn btn-simple btn-success btn-icon pull-right secondary-color shadow-grey" [routerLink]="addPropertyLink"><i class="material-icons">add_to_queue</i> Add Property</button>
                         </div>
                         <div class="material-datatables">
                             <table id="datatables" class="table table-striped table-no-bordered table-hover" cellspacing="0" width="100%" style="width:100%">
@@ -29,7 +29,7 @@
                                     </tr>
                                 </tfoot>
                                 <tbody id="bookingTableBody">
-                                    <tr *ngFor="let item of properties; let i = index; let last = last ">
+                                    <tr *ngFor="let item of mainService.properties; let i = index; let last = last ">
                                         <td>{{item.Id}}</td>
                                         <td>{{item.Name}}</td>
                                         <td class="text-right">
@@ -37,7 +37,7 @@
                                             <button class="btn btn-simple btn-danger btn-icon shadow-grey"><i class="material-icons">close</i>Remove</button>
                                             <button class="btn btn-simple btn-warning btn-icon shadow-grey"><i class="material-icons">euro_symbol</i>Set Rates</button>
                                         </td>
-										{{ !reading && last && !datatableInited ? finishReading() : "" }}
+										{{ !mainService.isReading && last && !datatableInited ? finishReading() : "" }}
                                     </tr>
                                 </tbody>
                             </table>
@@ -53,6 +53,6 @@
     </div>
 </div>
 
-<div class="loading-gif" [hidden]="!reading">
+<div class="loading-gif" [hidden]="!mainService.isReading">
 	<img src="../assets/img/loading.gif"/>
 </div>
