--- a/app/dashboard/properties/propertyinfo/propertyinfo.component.html
+++ b/app/dashboard/properties/propertyinfo/propertyinfo.component.html
@@ -20,18 +20,18 @@
                     <label class="control-label">Listing Name</label>
                     <input type="text" class="form-control" (blur)="listingNameChanged($event)">
                 </div>                                                    
-                <div class="form-group label-floating col-lg-6 col-md-6 col-sm-12 official-name">
-                    <label class="control-label">Official Name</label>
-                    <input type="text" class="form-control" (blur)="officialNameChanged($event)">
+                <div class="form-group has-error label-floating col-lg-6 col-md-6 col-sm-12 official-name">
+                    <label class="control-label">Official Name *</label>
+                    <input type="text" class="form-control" (blur)="officialNameChanged($event)" required>
                 </div>                                                   
                 <div class="form-group label-floating">
                     <label class="control-label">Address</label>
                     <input type="text" class="form-control" (blur)="addressChanged($event)">
                 </div>
                 <div>
-                    <div ng2-auto-complete id="regionName" [max-num-list]="10" [source]="regions" (valueChanged)="regionChanged($event)" class="form-group label-floating">
-                        <label class="control-label">Select Region</label>
-                        <input class="form-control">
+                    <div ng2-auto-complete id="regionName" [max-num-list]="10" [source]="regions" (valueChanged)="regionChanged($event)" class="form-group label-floating has-error">
+                        <label class="control-label">Select Region *</label>
+                        <input class="form-control" required>
                     </div>
                 </div>
             </div>
@@ -76,6 +76,7 @@
                     <label class="control-label">Box Url</label>
                     <input type="text" class="form-control" (blur)="boxUrlChanged($event)">
                 </div>  
+                <property-metafilter-cmp [metadata]="mainService.metadata[4]" #villadescription></property-metafilter-cmp>
             </div>
         </div>
     </div>
@@ -99,21 +100,21 @@
                         <label class="control-label">Job Title</label>
                         <input type="text" class="form-control" (blur)="adminInfoChanged(item.id, 'jobTitle', $event)">
                     </div>          
-                    <div class="form-group label-floating col-sm-12 col-md-6 col-lg-4">
+                    <div class="form-group label-floating has-error col-sm-12 col-md-6 col-lg-4">
                         <label class="control-label">First Name</label>
-                        <input type="text" class="form-control" (blur)="adminInfoChanged(item.id, 'firstName', $event)">
+                        <input type="text" class="form-control" (blur)="adminInfoChanged(item.id, 'firstName', $event)" required>
                     </div>                                     
                     <div class="form-group label-floating col-sm-12 col-md-6 col-lg-4">
                         <label class="control-label">Last Name</label>
                         <input type="text" class="form-control" (blur)="adminInfoChanged(item.id, 'lastName', $event)">
                     </div>                                    
-                    <div class="form-group label-floating col-sm-12 col-md-6 col-lg-4">
+                    <div class="form-group label-floating has-error col-sm-12 col-md-6 col-lg-4">
                         <label class="control-label">Email Address</label>
-                        <input type="email" class="form-control" (blur)="adminInfoChanged(item.id, 'email', $event)">
+                        <input type="email" class="form-control" (blur)="adminInfoChanged(item.id, 'email', $event)" required>
                     </div>
-                    <div class="form-group label-floating col-sm-12 col-md-6 col-lg-4">
+                    <div class="form-group label-floating has-error col-sm-12 col-md-6 col-lg-4">
                         <label class="control-label">Telephone</label>
-                        <input type="text" class="form-control" (blur)="adminInfoChanged(item.id, 'telephone', $event)">
+                        <input type="number" min="0" class="form-control" (blur)="adminInfoChanged(item.id, 'telephone', $event)" required>
                     </div>
                     <div class="col-sm-12 col-md-12 col-lg-12">
                         <a (click)="removeContact(item.id)"> Remove Contact </a>
@@ -140,17 +141,17 @@
         </div>
         <div id="size_rooms" class="panel-collapse collapse panel-content" role="tabpanel" attr.aria-labelledby="heading-size_rooms">
             <div class="panel-body">
-                <div class="form-group label-floating col-sm-12 col-md-6 col-lg-4">
+                <div class="form-group label-floating has-error col-sm-12 col-md-6 col-lg-4">
                     <label class="control-label">Number of Bathrooms</label>
-                    <input type="number" class="form-control" (blur)="bathroomsCountChanged($event)">
+                    <input type="number" class="form-control" (blur)="bathroomsCountChanged($event)" required>
                 </div>
-                <div class="form-group label-floating col-sm-12 col-md-6 col-lg-4">
+                <div class="form-group label-floating has-error col-sm-12 col-md-6 col-lg-4">
                     <label class="control-label">Number of bedrooms</label>
-                    <input type="number" class="form-control" (blur)="bedroomsCountChanged($event)">
+                    <input type="number" class="form-control" (blur)="bedroomsCountChanged($event)" required>
                 </div>
-                <div class="form-group label-floating col-sm-12 col-md-6 col-lg-4">
+                <div class="form-group has-error label-floating col-sm-12 col-md-6 col-lg-4">
                     <label class="control-label">Sleeps</label>
-                    <input type="number" class="form-control" (blur)="sleepsChanged($event)">
+                    <input type="number" class="form-control" (blur)="sleepsChanged($event)" required>
                 </div>
                 <div class="form-group label-floating col-sm-12 col-md-6 col-lg-4">
                     <label class="control-label">Maximum Capacity</label>
