implement upload images & uploaded images gallery

--- a/app/dashboard/properties/addproperty/addproperty.component.css
+++ b/app/dashboard/properties/addproperty/addproperty.component.css
@@ -19,3 +19,11 @@ li > a.has-error {
 	color: red !important;
 }
 
+.checkbox {
+	display: inline-block;
+	widows: 150px;
+}
+
+.checkbox label {
+	color: black;
+}
