--- a/app/pages/properties/propertyinfo/propertyinfo.component.html
+++ b/app/pages/properties/propertyinfo/propertyinfo.component.html
@@ -20,7 +20,7 @@
                     <label class="control-label">Listing Name</label>
                     <input type="text" class="form-control" (blur)="listingNameChanged($event)">
                 </div>                                                    
-                <div class="form-group has-error label-floating col-lg-6 col-md-6 col-sm-12 official-name">
+                <div class="form-group has-error label-floating listing-name col-lg-6 col-md-6 col-sm-12 official-name">
                     <label class="control-label">Official Name *</label>
                     <input type="text" class="form-control" (blur)="officialNameChanged($event)" required>
                 </div>                                                   
@@ -72,7 +72,7 @@
                     <label class="control-label">Collaborator Initials</label>
                     <input type="text" class="form-control" (blur)="collaboratorInitialChanged($event)">
                 </div>                                      
-                <div class="form-group label-floating col-lg-6 col-md-6 col-sm-12 box-url">
+                <div class="form-group label-floating listing-name col-lg-6 col-md-6 col-sm-12 box-url">
                     <label class="control-label">Box Url</label>
                     <input type="text" class="form-control" (blur)="boxUrlChanged($event)">
                 </div>  
@@ -96,31 +96,31 @@
         <div id="admin_info" class="panel-collapse collapse panel-content" role="tabpanel" attr.aria-labelledby="heading-admin_info">
             <div class="panel-body">
                 <div class="contact" *ngFor="let item of contacts">
-                    <div class="form-group label-floating col-sm-12 col-md-6 col-lg-4">
+                    <div class="form-group label-floating listing-name col-sm-12 col-md-6 col-lg-4">
                         <label class="control-label">Job Title</label>
                         <input type="text" class="form-control" (blur)="adminInfoChanged(item.id, 'jobTitle', $event)">
                     </div>          
-                    <div class="form-group label-floating has-error col-sm-12 col-md-6 col-lg-4">
+                    <div class="form-group label-floating listing-name has-error col-sm-12 col-md-6 col-lg-4">
                         <label class="control-label">First Name</label>
                         <input type="text" class="form-control" (blur)="adminInfoChanged(item.id, 'firstName', $event)" required>
                     </div>                                     
-                    <div class="form-group label-floating col-sm-12 col-md-6 col-lg-4">
+                    <div class="form-group label-floating listing-name col-sm-12 col-md-6 col-lg-4">
                         <label class="control-label">Last Name</label>
                         <input type="text" class="form-control" (blur)="adminInfoChanged(item.id, 'lastName', $event)">
                     </div>                                    
-                    <div class="form-group label-floating has-error col-sm-12 col-md-6 col-lg-4">
+                    <div class="form-group label-floating listing-name has-error col-sm-12 col-md-6 col-lg-4">
                         <label class="control-label">Email Address</label>
                         <input type="email" class="form-control" (blur)="adminInfoChanged(item.id, 'email', $event)" required>
                     </div>
-                    <div class="form-group label-floating has-error col-sm-12 col-md-6 col-lg-4">
+                    <div class="form-group label-floating listing-name has-error col-sm-12 col-md-6 col-lg-4">
                         <label class="control-label">Telephone</label>
                         <input type="number" min="0" class="form-control" (blur)="adminInfoChanged(item.id, 'telephone', $event)" required>
                     </div>
-                    <div class="col-sm-12 col-md-12 col-lg-12">
+                    <div class="listing-name col-sm-12 col-md-12 col-lg-12">
                         <a (click)="removeContact(item.id)"> Remove Contact </a>
                     </div>
                 </div>
-                <div class="add-contact col-sm-12 col-md-12 col-lg-12">
+                <div class="listing-name add-contact col-sm-12 col-md-12 col-lg-12">
                     <a (click)="showAddContact()"> Add Contact </a>
                 </div>
             </div>
@@ -141,73 +141,73 @@
         </div>
         <div id="size_rooms" class="panel-collapse collapse panel-content" role="tabpanel" attr.aria-labelledby="heading-size_rooms">
             <div class="panel-body">
-                <div class="form-group label-floating has-error col-sm-12 col-md-6 col-lg-4">
+                <div class="form-group label-floating listing-name has-error col-sm-12 col-md-6 col-lg-4">
                     <label class="control-label">Number of Bathrooms</label>
                     <input type="number" class="form-control" (blur)="bathroomsCountChanged($event)" required>
                 </div>
-                <div class="form-group label-floating has-error col-sm-12 col-md-6 col-lg-4">
+                <div class="form-group label-floating listing-name has-error col-sm-12 col-md-6 col-lg-4">
                     <label class="control-label">Number of bedrooms</label>
                     <input type="number" class="form-control" (blur)="bedroomsCountChanged($event)" required>
                 </div>
-                <div class="form-group has-error label-floating col-sm-12 col-md-6 col-lg-4">
+                <div class="form-group has-error label-floating listing-name col-sm-12 col-md-6 col-lg-4">
                     <label class="control-label">Sleeps</label>
                     <input type="number" class="form-control" (blur)="sleepsChanged($event)" required>
                 </div>
-                <div class="form-group label-floating col-sm-12 col-md-6 col-lg-4">
+                <div class="form-group label-floating listing-name col-sm-12 col-md-6 col-lg-4">
                     <label class="control-label">Maximum Capacity</label>
                     <input type="number" class="form-control" (blur)="maximumCapacityChanged($event)">
                 </div>
-                <div class="form-group label-floating col-sm-12 col-md-6 col-lg-4">
+                <div class="form-group label-floating listing-name col-sm-12 col-md-6 col-lg-4">
                     <label class="control-label">Living Area (m
                     <sup>2</sup>
                     )</label>
                     <input type="number" class="form-control" (blur)="livingareaSquareChanged($event)">
                 </div>
-                <div class="form-group label-floating col-sm-12 col-md-6 col-lg-4">
+                <div class="form-group label-floating listing-name col-sm-12 col-md-6 col-lg-4">
                     <label class="control-label">Dining Capacity</label>
                     <input type="number" class="form-control" (blur)="diningCapacityChanged($event)">
                 </div>
-                <div class="form-group label-floating col-sm-12 col-md-12 col-lg-12">
+                <div class="form-group label-floating listing-name col-sm-12 col-md-12 col-lg-12">
                     <label class="control-label">Kitchen Information</label>
                     <textarea type="text" class="form-control" (blur)="kitchenInfoChanged($event)"></textarea>
                 </div>
 
-                <div class="col-sm-12 col-md-12 col-lg-12 bedrooms">
+                <div class="col-sm-12 col-md-12 col-lg-12 listing-name bedrooms">
                     <label>Bedroom Information</label>
                     <div class="" *ngFor="let item of bedrooms">
-                        <div class="form-group label-floating col-sm-12 col-md-3 col-lg-3">
+                        <div class="form-group label-floating listing-name col-sm-12 col-md-3 col-lg-3">
                             <label class="control-label">Bedroom Name</label>
                             <input type="text" class="form-control" (blur)="bedroomChanged(item.id, 'name', $event)">
                         </div>
-                        <div class="form-group label-floating col-sm-12 col-md-6 col-lg-6">
+                        <div class="form-group label-floating listing-name col-sm-12 col-md-6 col-lg-6">
                             <label class="control-label">Bedroom Description</label>
                             <input type="text" class="form-control" (blur)="bedroomChanged(item.id, 'description', $event)">
                         </div>
-                        <div class="col-sm-12 col-md-3 col-lg-3 remove-button">
+                        <div class="col-sm-12 col-md-3 col-lg-3 listing-name remove-button">
                             <a (click)="removeBedroom(item.id)">REMOVE BEDROOM</a>
                         </div>
                     </div>
-                    <div class="col-sm-12 col-md-12 col-lg-12">
+                    <div class="listing-name col-sm-12 col-md-12 col-lg-12">
                         <a class="add-bedroom" (click)="addBedroom()">Add Bedroom</a>
                     </div>
                 </div>
 
-                <div class="col-sm-12 col-md-12 col-lg-12 bathrooms">
+                <div class="listing-name col-sm-12 col-md-12 col-lg-12 bathrooms">
                     <label>Bathroom Information</label>
                     <div class="" *ngFor="let item of bathrooms">
-                        <div class="form-group label-floating col-sm-12 col-md-3 col-lg-3">
+                        <div class="form-group label-floating listing-name col-sm-12 col-md-3 col-lg-3">
                             <label class="control-label">Bathroom Name</label>
                             <input type="text" class="form-control" (blur)="bathroomChanged(item.id, 'name', $event)">
                         </div>
-                        <div class="form-group label-floating col-sm-12 col-md-6 col-lg-6">
+                        <div class="form-group label-floating listing-name col-sm-12 col-md-6 col-lg-6">
                             <label class="control-label">Bathroom Description</label>
                             <input type="text" class="form-control" (blur)="bathroomChanged(item.id, 'name', $event)">
                         </div>
-                        <div class="col-sm-12 col-md-3 col-lg-3 remove-button">
+                        <div class="col-sm-12 col-md-3 col-lg-3 listing-name remove-button">
                             <a (click)="removeBathroom(item.id)">REMOVE BATHROOM</a>
                         </div>
                     </div>
-                    <div class="col-sm-12 col-md-12 col-lg-12">
+                    <div class="listing-name col-sm-12 col-md-12 col-lg-12">
                         <a class="add-bathroom" (click)="addBathroom()">Add Bathroom</a>
                     </div>
                 </div>
@@ -229,41 +229,41 @@
         </div>
         <div id="conditions" class="panel-collapse collapse panel-content" role="tabpanel" attr.aria-labelledby="heading-conditions">
             <div class="panel-body">
-                <div class="col-sm-12 col-md-12 col-lg-12"> 
-                    <h5 class="col-sm-12 col-md-12 col-lg-12">Children Allowed</h5>                                       
-                    <div id="childrenAllow" class="radio col-sm-12 col-md-4 col-lg-4">
+                <div class="listing-name col-sm-12 col-md-12 col-lg-12">
+                    <h5 class="listing-name col-sm-12 col-md-12 col-lg-12">Children Allowed</h5>
+                    <div id="childrenAllow" class="listing-name radio col-sm-12 col-md-4 col-lg-4">
                         <label>
                             <input type="radio" name="childrenAllow" checked="true" value="0" (blur)="childrenAllowChanged($event)"> Children Welcome
                         </label>
                     </div>
-                    <div class="radio col-sm-12 col-md-4 col-lg-4">
+                    <div class="listing-name radio col-sm-12 col-md-4 col-lg-4">
                         <label>
                             <input type="radio" name="childrenAllow" value="1" (blur)="childrenAllowChanged($event)"> Ask Owner
                         </label>
                     </div>
-                    <div class="radio col-sm-12 col-md-4 col-lg-4">
+                    <div class="listing-name radio col-sm-12 col-md-4 col-lg-4">
                         <label>
                             <input type="radio" name="childrenAllow" value="2" (blur)="childrenAllowChanged($event)"> Not Suitable For Children
                         </label>
                     </div>
                 </div>
-                <div class="col-sm-12 col-md-12 col-lg-12">
-                    <div class="checkbox col-sm-12 col-md-3 col-lg-3">
+                <div class="listing-name col-sm-12 col-md-12 col-lg-12">
+                    <div class="listing-name checkbox col-sm-12 col-md-3 col-lg-3">
                         <label>
                             <input type="checkbox" name="optionsCheckboxes" (blur)="smokeAllowChange($event)"> Smoking Allowed
                         </label>
                     </div>
-                    <div class="checkbox col-sm-12 col-md-3 col-lg-3">
+                    <div class="listing-name checkbox col-sm-12 col-md-3 col-lg-3">
                         <label>
                             <input type="checkbox" name="optionsCheckboxes" (blur)="wheelchairAllowChange($event)"> Wheelchairs Allowed
                         </label>
                     </div>
-                    <div class="checkbox col-sm-12 col-md-3 col-lg-3">
+                    <div class="listing-name checkbox col-sm-12 col-md-3 col-lg-3">
                         <label>
                             <input type="checkbox" name="optionsCheckboxes" (blur)="petsAllowChange($event)"> Pets Allowed
                         </label>
                     </div>
-                    <div class="checkbox col-sm-12 col-md-3 col-lg-3">
+                    <div class="listing-name checkbox col-sm-12 col-md-3 col-lg-3">
                         <label>
                             <input type="checkbox" name="optionsCheckboxes" (blur)="eventsAllowChange($event)"> Events Allowed
                         </label>
