added edit property route

--- a/app/pages/properties/properties.component.html
+++ b/app/pages/properties/properties.component.html
@@ -33,7 +33,7 @@
                                         <td>{{item.Id}}</td>
                                         <td>{{item.Name}}</td>
                                         <td class="text-right">
-                                            <button class="btn btn-simple btn-warning btn-icon shadow-grey"><i class="material-icons">edit</i>Edit</button>
+                                            <button class="btn btn-simple btn-warning btn-icon shadow-grey" routerLink="/properties/editproperty/{{item.Id}}"><i class="material-icons">edit</i>Edit</button>
                                             <button class="btn btn-simple btn-danger btn-icon shadow-grey"><i class="material-icons">close</i>Remove</button>
                                             <button class="btn btn-simple btn-warning btn-icon shadow-grey"><i class="material-icons">euro_symbol</i>Set Rates</button>
                                         </td>
